--- a/templates/mypages/mypage.html
+++ b/templates/mypages/mypage.html
@@ -46,7 +46,7 @@
                     <a href="/mypage:{{ User_code }}/edit/infection">感染記録表</a>
                     <a href="/mypage:{{ User_code }}/edit/vaccine">ワクチン接種記録表</a>
                 </div>
-                <button class="logoutButton" onclick="location.href = '/mypage:{{ User_code }}/logout'">
+                <button class="menuButton" onclick="location.href = '/mypage:{{ User_code }}/logout'">
                     ログアウト
                 </button>
             </div>
