--- a/templates/mypages/admin_mypage.html
+++ b/templates/mypages/admin_mypage.html
@@ -124,7 +124,7 @@
                         <th>移動方法</th>
                         <th>出発地</th>
                         <th>到着地</th>
-                        <th>同行者数</th>
+                        <th>同行者</th>
                         <th>特記事項</th>
                         <th>記録日</th>
                     </tr>
